--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,13 @@ header ul {
     gap: 10px;
 }
 
+div.checkout {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-weight: 700;
+}
+
 ul > li {
     list-style-type: none;
 }
@@ -201,12 +208,87 @@ a.active {
     background-color: #6b7280;
     height: 100%;
     display: flex;
+    align-items: center;
     flex-direction: column;
     gap: 20px;
 }
 
 .contact h1 {
     font-family: "intro_rust_gbase_2_line", sans-serif;
+    color: white;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 700px;
+}
+
+form input, form label, textarea {
+    display: inline-block;
+    padding: 0 10px;
+    flex-grow: 1;
+    height: 100%;
+}
+
+form input {
+    height: 30px;
+    border-radius: 15px;
+    border: none;
+    
+}
+
+form div.text label {
+    vertical-align: top;
+}
+
+label {
+    font-family: "intro_rust_gbase_2_line", sans-serif;
+    font-weight: 700;
+    color: #facc15;
+    width: 60px;
+    text-align: center;
+}
+
+form div {
+    justify-content: center;
+    display: flex;
+    align-items: center;
+
+}
+
+form button {
+    font-family: "intro_rust_gbase_2_line", sans-serif;
+    font-weight: 700;
+    display: inline-block;
+    padding: 10px 40px;
+    border-radius: 15px;
+    border: none;
+    background-color: #4ade80;
+}
+
+form textarea {
+    height: 80px;
+    padding-top: 10px;
+}
+
+div.button-container {
+    margin-top: 20px;
+    justify-content: center;
+}
+
+.contact .thankyou {
+    font-family: "intro_rust_gbase_2_line", sans-serif;
+    font-weight: 700;
+    color: white;
+    margin-top: 20px;
+    font-size: 18px;
+}
+
+.contact .thankyou a {
+    text-decoration: none;
+    color: #bef264;
 }
 
 @media screen and (max-width: 600px) {
