--- a/src/App.css
+++ b/src/App.css
@@ -121,6 +121,155 @@ a.active {
     perspective: 1000px;
 }
 
+.shop {
+    background-color: #374151;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.shop ul {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+}
+
+.shop a {
+    font-family: "intro_rust_gbase_2_line", sans-serif;
+    font-weight: 700;
+}
+
+.shop main .menitem {
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-auto-rows: 470px;
+    gap: 30px;
+}
+
+.shop main {
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+}
+
+.shop main input {
+    height: 30px;
+    text-align: center;
+    border: none;
+    border-radius: 15px;
+    width: 35%;
+    font-size: 18px;
+    align-self: center;
+
+    
+
+}
+
+.shop main div.loader {
+    text-align: center;
+    font-family: "intro_rust_gbase_2_line", sans-serif;
+    font-weight: 700;
+    color: white;
+}
+
+.shop main .itemcards {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background-color: #d1d5db;
+    box-sizing: border-box;
+    padding: 10px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 5px 7px #1f2937;
+}
+
+.shop main .itemcards input {
+    height: 30px;
+    border-radius: 15px;
+    border: none;
+    text-align: center;
+    width: 70%;
+
+}
+
+.shop main .itemcards form {
+    width: 150px;
+    box-sizing: border-box;
+}
+
+.shop main .itemcards .quantity button {
+    padding: 10px 20px;
+    border-radius: 15px;
+    border: none;
+    font-size: 20px;
+}
+
+.shop main .itemcards .quantity .add {
+    background-color: #22c55e;
+}
+
+.shop main .itemcards .quantity .sub {
+    background-color: #ef4444;
+}
+
+.shop main .itemcards :nth-child(4) {
+    display: flex;
+    justify-content: center;
+}
+
+.shop main .itemcards :nth-child(4) > button {
+    padding: 10px 20px;
+    border-radius: 15px;
+    background-color: #22c55e;
+    font-family: "intro_rust_gbase_2_line", sans-serif;
+    font-weight: 700;
+}
+
+.shop main .itemcards img{
+    width: 45%;
+    max-height: 190px;
+    object-fit: contain;
+    display: block;
+}
+
+.shop main .itemcards .img {
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+}
+
+.shop main .itemcards .title, .shop main .itemcards .price {
+    font-family: "intro_rust_gbase_2_line", sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+}
+
+.shop main .itemcards .price {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.shop main .itemcards .quantity {
+    display: flex;
+    gap: 15px;
+    justify-content: center;
+    align-items: center;
+}
+
+.shop main .itemcards button[type="submit"] {
+    padding: 10px 20px;
+    display: block;
+    margin: 0 auto;
+    min-width: 50px;
+    border-radius: 15px;
+    color: white;
+    background-color: #1f2937;
+    font-family: "intro_rust_gbase_2_line", sans-serif;
+    font-weight: 700;
+}
+
 @keyframes rotateY {
     from {
         transform: rotateY(0deg); /* Starting position */
@@ -296,6 +445,12 @@ div.button-container {
         flex-direction: column;
         gap: 20px;
     }
+
+    .shop main input {
+        width: 100%;
+    }
+
+
 }
 
 @media (hover:hover) {
