--- a/src/App.css
+++ b/src/App.css
@@ -174,7 +174,7 @@ a.active {
     color: white;
 }
 
-.shop main .itemcards {
+.shop main .itemcards, .singlemen > .singlecard, .singlewomen > .singlecard {
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -219,22 +219,24 @@ a.active {
     justify-content: center;
 }
 
-.shop main .itemcards :nth-child(4) > button {
+.shop main .itemcards :nth-child(4) > a {
     padding: 10px 20px;
     border-radius: 15px;
     background-color: #22c55e;
     font-family: "intro_rust_gbase_2_line", sans-serif;
     font-weight: 700;
+    text-decoration: none;
+    color: black;
 }
 
-.shop main .itemcards img{
+.shop main .itemcards img, .singlemen > .singlecard img, .singlewomen > .singlecard img{
     width: 45%;
     max-height: 190px;
     object-fit: contain;
     display: block;
 }
 
-.shop main .itemcards .img {
+.shop main .itemcards .img, .singlemen > .singlecard > .img, .singlewomen > .singlecard > .img {
     flex-grow: 1;
     display: flex;
     justify-content: center;
@@ -440,6 +442,65 @@ div.button-container {
     color: #bef264;
 }
 
+.singlemen, .singlewomen {
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 450px;
+}
+
+.singlemen > .singlecard .title, .singlemen > .singlecard .price, .singlemen > .singlecard .rating {
+    font-family: "intro_rust_gbase_2_line", sans-serif;
+    font-weight: 700;
+}
+
+.singlewomen > .singlecard .title, .singlewomen > .singlecard .price, .singlewomen > .singlecard .rating {
+    font-family: "intro_rust_gbase_2_line", sans-serif;
+    font-weight: 700;
+}
+
+
+.singlemen > .singlecard .price, .singlewomen > .singlecard .price  {
+    font-size: 20px;
+    text-align: center;
+}
+
+.singlemen > .singlecard .desc, .singlewomen > .singlecard .desc {
+    font-family: 'source_sans_proextralight';
+    font-weight: 900;
+    font-size: 18px;
+    text-align: center;
+    max-width: 900px;
+}
+
+.singlemen > .singlecard .description > div, .singlewomen > .singlecard .description > div {
+    font-family: "intro_rust_gbase_2_line", sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    display: inline-block;
+}
+
+.singlemen > .singlecard .description, .singlewomen > .singlecard .description {
+    display: flex;
+    gap: 40px;
+    align-items: center;
+}
+
+.singlemen > .singlecard .rating, .singlewomen > .singlecard .rating, .singlewomen > .singlecard .rating .starimages, .singlemen > .singlecard .rating .starimages    {
+    display: flex;
+}
+
+.singlecard .rating > .starimages > img {
+    width: 30px;
+    height: 30px;
+}
+
+.singlemen > .singlecard .rating, .singlewomen > .singlecard .rating {
+    align-items: center;
+    gap: 40px;
+
+}
+
 @media screen and (max-width: 600px) {
     header {
         flex-direction: column;
@@ -448,6 +509,14 @@ div.button-container {
 
     .shop main input {
         width: 100%;
+    }
+
+    .singlemen, .singlewomen {
+        grid-auto-rows: 900px;
+    }
+
+    .shop main .itemcards img, .singlemen > .singlecard img, .singlewomen > .singlecard img {
+        max-height: none;
     }
 
 
