--- a/src/App.css
+++ b/src/App.css
@@ -509,11 +509,13 @@ div.button-container {
     flex-direction: column;
     gap: 30px;
     padding: 30px;
+    height: 100%;
 }
 
 .checkingout section:first-child {
     background-color: white;
     min-width: 70%;
+    max-width: 80%;
     min-height: 400px;
     font-family: "intro_rust_gbase_2_line", sans-serif;
     font-weight: 700;
@@ -521,6 +523,9 @@ div.button-container {
     padding: 20px;
     border-radius: 20px;
     box-shadow: 0px 0px 5px 7px #1f2937;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
 
 .checkingout section:nth-child(2) {
@@ -618,6 +623,7 @@ div.button-container {
     display: flex;
     flex-direction: column;
     gap: 15px;
+    flex-grow: 1;
 
 }
 
@@ -630,7 +636,7 @@ div.button-container {
 
 .checkingout .order .items .orderitems {
     display: flex;
-    gap: 10px;
+    gap: 20px;
     align-items: center;
 }
 
@@ -678,6 +684,30 @@ div.searchbar {
     display: flex;
     justify-content: center;
     gap: 50px;
+}
+
+.checkingout .information {
+    display: flex; 
+    gap: 10px;
+    align-items: center;
+}
+
+.checkingout div.totalprice {
+    text-align: center;
+    font-size: 20px;
+}
+
+.checkingout div.title {
+    text-align: center;
+    flex-grow: 1;
+}
+
+.checkingout div.orderitems div.quant {
+    min-width: 60px;
+} 
+
+.checkingout div.orderitems {
+    justify-content: space-between;
 }
 
 
