Change background color in app.css
Changed background color in app.css to white for item cards

--- a/src/App.css
+++ b/src/App.css
@@ -183,7 +183,7 @@ a.active {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    background-color: #d1d5db;
+    background-color: white;
     box-sizing: border-box;
     padding: 10px;
     border-radius: 20px;
